Fixed: top bar had too much height because of label styling

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -49,6 +49,10 @@
 #top-bar-menu {
   text-align: right;
 
+  label {
+    margin: 0;
+  }
+
   ul, li {
     margin: 0;
     padding: 0;
